--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
             <h1>Firewall Penitentiary</h1>
         </div>
         <div id="mainScreen"></div>
+        <div class="buttons"></div>
+        <h2>Score 2 goals to unveil hidden information</h2>
         <h2>In other news....</h2>
         <div class="name-craft-box">
             <header></header>
         </div>
         <div class="space-station"></div>
     </div>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="assets/js/phaser.min.js"></script>
     <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
